import{m as p,V as E,ay as v,X as k,Y as g,c as x,j as l,u as $,C as Q}from"./index-CDhPC2s0.js";import{a as X}from"./journeyResolver-5mu45n2o.js";const R={NEW:["NEEDS_REVIEW"],NEEDS_REVIEW:["TRIAGED","CLOSED"],TRIAGED:["FOLLOWING_UP","CLOSED"],FOLLOWING_UP:["CLOSED"],CLOSED:[]};function q(){return p().cases}function U(t){return p().cases.find(e=>e.id===t)}function z(){const t=p(),e=new Date;e.setHours(0,0,0,0);const n=e.getTime(),a={ACUTE:0,SUBACUTE:1,CONTROL:2};return t.cases.map(r=>{const o=t.patientJourneys.filter(c=>c.patientId===r.patientId&&c.status==="ACTIVE").sort((c,d)=>new Date(d.createdAt).getTime()-new Date(c.createdAt).getTime())[0];if(!o)return{...r,activeCategory:r.category};const s=new Date(o.startDate).getTime();let i=null;for(const c of X(o.id)){const d=s+(c.offsetDays-c.windowDays)*864e5,h=s+(c.offsetDays+c.windowDays)*864e5;if(n>=d&&n<=h){const f=c.dashboardCategory??r.category;(i===null||a[f]<a[i])&&(i=f)}}return{...r,activeCategory:i}})}function J(t,e,n,a){let r=p();const o=r.cases.find(c=>c.id===t);if(!o)throw new Error(`Case ${t} not found`);const s=e.closeImmediately?"CLOSED":"TRIAGED";if(!R[o.status]?.includes(s))throw new Error(`Invalid transition: ${o.status} → ${s}`);const i={...o,status:s,nextStep:e.nextStep,deadline:e.deadline,internalNote:e.internalNote,patientMessage:e.patientMessage,assignedRole:e.assignedRole,assignedUserId:e.assignedUserId,triagedByUserId:n,lastActivityAt:E()};return r={...r,cases:r.cases.map(c=>c.id===t?i:c)},r=v(r,t,n,a,"TRIAGED",{from:o.status,to:s,nextStep:e.nextStep,deadline:e.deadline,internalNote:e.internalNote,assignedRole:e.assignedRole}),k(r),i}function K(t,e,n,a){const r={...e,status:e.status??"PENDING"};let o=p();const s=o.cases.find(c=>c.id===t);if(!s)throw new Error(`Case ${t} not found`);const i={...s,bookings:[...s.bookings??[],r],lastActivityAt:E()};return o={...o,cases:o.cases.map(c=>c.id===t?i:c)},o=v(o,t,n,a,"BOOKING_CREATED",{bookingId:e.id,scheduledAt:e.scheduledAt,role:e.role}),k(o),i}function H(t,e,n,a,r){let o=p();const s=o.cases.find(d=>d.id===t);if(!s)throw new Error(`Case ${t} not found`);const i=(s.bookings??[]).map(d=>d.id===e?{...d,...n}:d),c={...s,bookings:i,lastActivityAt:E()};return o={...o,cases:o.cases.map(d=>d.id===t?c:d)},o=v(o,t,a,r,"BOOKING_UPDATED",{bookingId:e,patch:n}),k(o),c}function Z(t,e,n,a){return H(t,e,{status:"CANCELLED"},n,a)}function tt(t,e,n,a){let r=p();const o=r.cases.find(i=>i.id===t);if(!o)throw new Error(`Case ${t} not found`);if(!R[o.status]?.includes(e))throw new Error(`Invalid transition: ${o.status} → ${e}`);const s={...o,status:e,lastActivityAt:E()};return r={...r,cases:r.cases.map(i=>i.id===t?s:i)},r=v(r,t,n,a,"STATUS_CHANGED",{from:o.status,to:e}),k(r),s}const we=t=>g(()=>q().filter(e=>e.patientId===t)),ye=t=>g(()=>U(t)),be=(t,e,n,a)=>g(()=>J(t,e,n,a)),pe=(t,e,n,a)=>g(()=>K(t,e,n,a)),Oe=(t,e,n,a,r)=>g(()=>H(t,e,n,a,r)),De=(t,e,n,a)=>g(()=>Z(t,e,n,a)),Se=(t,e,n,a)=>g(()=>tt(t,e,n,a)),Me=()=>g(()=>z()),xe=()=>g(()=>q().filter(t=>(t.status==="TRIAGED"||t.status==="FOLLOWING_UP")&&t.nextStep!==void 0&&t.nextStep!=="NO_ACTION").sort((t,e)=>!t.deadline&&!e.deadline?0:t.deadline?e.deadline?new Date(t.deadline).getTime()-new Date(e.deadline).getTime():-1:1)),G=6048e5,et=864e5,Pe=6e4,Ee=36e5,Y=Symbol.for("constructDateFrom");function y(t,e){return typeof t=="function"?t(e):t&&typeof t=="object"&&Y in t?t[Y](e):t instanceof Date?new t.constructor(e):new Date(e)}function m(t,e){return y(e||t,t)}let nt={};function W(){return nt}function M(t,e){const n=W(),a=e?.weekStartsOn??e?.locale?.options?.weekStartsOn??n.weekStartsOn??n.locale?.options?.weekStartsOn??0,r=m(t,e?.in),o=r.getDay(),s=(o<a?7:0)+o-a;return r.setDate(r.getDate()-s),r.setHours(0,0,0,0),r}function P(t,e){return M(t,{...e,weekStartsOn:1})}function j(t,e){const n=m(t,e?.in),a=n.getFullYear(),r=y(n,0);r.setFullYear(a+1,0,4),r.setHours(0,0,0,0);const o=P(r),s=y(n,0);s.setFullYear(a,0,4),s.setHours(0,0,0,0);const i=P(s);return n.getTime()>=o.getTime()?a+1:n.getTime()>=i.getTime()?a:a-1}function N(t){const e=m(t),n=new Date(Date.UTC(e.getFullYear(),e.getMonth(),e.getDate(),e.getHours(),e.getMinutes(),e.getSeconds(),e.getMilliseconds()));return n.setUTCFullYear(e.getFullYear()),+t-+n}function at(t,...e){const n=y.bind(null,e.find(a=>typeof a=="object"));return e.map(n)}function F(t,e){const n=m(t,e?.in);return n.setHours(0,0,0,0),n}function rt(t,e,n){const[a,r]=at(n?.in,t,e),o=F(a),s=F(r),i=+o-N(o),c=+s-N(s);return Math.round((i-c)/et)}function ot(t,e){const n=j(t,e),a=y(t,0);return a.setFullYear(n,0,4),a.setHours(0,0,0,0),P(a)}function st(t){return t instanceof Date||typeof t=="object"&&Object.prototype.toString.call(t)==="[object Date]"}function it(t){return!(!st(t)&&typeof t!="number"||isNaN(+m(t)))}function ct(t,e){const n=m(t,e?.in);return n.setFullYear(n.getFullYear(),0,1),n.setHours(0,0,0,0),n}const ut={lessThanXSeconds:{one:"less than a second",other:"less than {{count}} seconds"},xSeconds:{one:"1 second",other:"{{count}} seconds"},halfAMinute:"half a minute",lessThanXMinutes:{one:"less than a minute",other:"less than {{count}} minutes"},xMinutes:{one:"1 minute",other:"{{count}} minutes"},aboutXHours:{one:"about 1 hour",other:"about {{count}} hours"},xHours:{one:"1 hour",other:"{{count}} hours"},xDays:{one:"1 day",other:"{{count}} days"},aboutXWeeks:{one:"about 1 week",other:"about {{count}} weeks"},xWeeks:{one:"1 week",other:"{{count}} weeks"},aboutXMonths:{one:"about 1 month",other:"about {{count}} months"},xMonths:{one:"1 month",other:"{{count}} months"},aboutXYears:{one:"about 1 year",other:"about {{count}} years"},xYears:{one:"1 year",other:"{{count}} years"},overXYears:{one:"over 1 year",other:"over {{count}} years"},almostXYears:{one:"almost 1 year",other:"almost {{count}} years"}},dt=(t,e,n)=>{let a;const r=ut[t];return typeof r=="string"?a=r:e===1?a=r.one:a=r.other.replace("{{count}}",e.toString()),n?.addSuffix?n.comparison&&n.comparison>0?"in "+a:a+" ago":a};function C(t){return(e={})=>{const n=e.width?String(e.width):t.defaultWidth;return t.formats[n]||t.formats[t.defaultWidth]}}const ft={full:"EEEE, MMMM do, y",long:"MMMM do, y",medium:"MMM d, y",short:"MM/dd/yyyy"},ht={full:"h:mm:ss a zzzz",long:"h:mm:ss a z",medium:"h:mm:ss a",short:"h:mm a"},lt={full:"{{date}} 'at' {{time}}",long:"{{date}} 'at' {{time}}",medium:"{{date}}, {{time}}",short:"{{date}}, {{time}}"},mt={date:C({formats:ft,defaultWidth:"full"}),time:C({formats:ht,defaultWidth:"full"}),dateTime:C({formats:lt,defaultWidth:"full"})},gt={lastWeek:"'last' eeee 'at' p",yesterday:"'yesterday at' p",today:"'today at' p",tomorrow:"'tomorrow at' p",nextWeek:"eeee 'at' p",other:"P"},wt=(t,e,n,a)=>gt[t];function D(t){return(e,n)=>{const a=n?.context?String(n.context):"standalone";let r;if(a==="formatting"&&t.formattingValues){const s=t.defaultFormattingWidth||t.defaultWidth,i=n?.width?String(n.width):s;r=t.formattingValues[i]||t.formattingValues[s]}else{const s=t.defaultWidth,i=n?.width?String(n.width):t.defaultWidth;r=t.values[i]||t.values[s]}const o=t.argumentCallback?t.argumentCallback(e):e;return r[o]}}const yt={narrow:["B","A"],abbreviated:["BC","AD"],wide:["Before Christ","Anno Domini"]},bt={narrow:["1","2","3","4"],abbreviated:["Q1","Q2","Q3","Q4"],wide:["1st quarter","2nd quarter","3rd quarter","4th quarter"]},pt={narrow:["J","F","M","A","M","J","J","A","S","O","N","D"],abbreviated:["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"],wide:["January","February","March","April","May","June","July","August","September","October","November","December"]},Ot={narrow:["S","M","T","W","T","F","S"],short:["Su","Mo","Tu","We","Th","Fr","Sa"],abbreviated:["Sun","Mon","Tue","Wed","Thu","Fri","Sat"],wide:["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"]},Dt={narrow:{am:"a",pm:"p",midnight:"mi",noon:"n",morning:"morning",afternoon:"afternoon",evening:"evening",night:"night"},abbreviated:{am:"AM",pm:"PM",midnight:"midnight",noon:"noon",morning:"morning",afternoon:"afternoon",evening:"evening",night:"night"},wide:{am:"a.m.",pm:"p.m.",midnight:"midnight",noon:"noon",morning:"morning",afternoon:"afternoon",evening:"evening",night:"night"}},St={narrow:{am:"a",pm:"p",midnight:"mi",noon:"n",morning:"in the morning",afternoon:"in the afternoon",evening:"in the evening",night:"at night"},abbreviated:{am:"AM",pm:"PM",midnight:"midnight",noon:"noon",morning:"in the morning",afternoon:"in the afternoon",evening:"in the evening",night:"at night"},wide:{am:"a.m.",pm:"p.m.",midnight:"midnight",noon:"noon",morning:"in the morning",afternoon:"in the afternoon",evening:"in the evening",night:"at night"}},Mt=(t,e)=>{const n=Number(t),a=n%100;if(a>20||a<10)switch(a%10){case 1:return n+"st";case 2:return n+"nd";case 3:return n+"rd"}return n+"th"},xt={ordinalNumber:Mt,era:D({values:yt,defaultWidth:"wide"}),quarter:D({values:bt,defaultWidth:"wide",argumentCallback:t=>t-1}),month:D({values:pt,defaultWidth:"wide"}),day:D({values:Ot,defaultWidth:"wide"}),dayPeriod:D({values:Dt,defaultWidth:"wide",formattingValues:St,defaultFormattingWidth:"wide"})};function S(t){return(e,n={})=>{const a=n.width,r=a&&t.matchPatterns[a]||t.matchPatterns[t.defaultMatchWidth],o=e.match(r);if(!o)return null;const s=o[0],i=a&&t.parsePatterns[a]||t.parsePatterns[t.defaultParseWidth],c=Array.isArray(i)?Et(i,f=>f.test(s)):Pt(i,f=>f.test(s));let d;d=t.valueCallback?t.valueCallback(c):c,d=n.valueCallback?n.valueCallback(d):d;const h=e.slice(s.length);return{value:d,rest:h}}}function Pt(t,e){for(const n in t)if(Object.prototype.hasOwnProperty.call(t,n)&&e(t[n]))return n}function Et(t,e){for(let n=0;n<t.length;n++)if(e(t[n]))return n}function vt(t){return(e,n={})=>{const a=e.match(t.matchPattern);if(!a)return null;const r=a[0],o=e.match(t.parsePattern);if(!o)return null;let s=t.valueCallback?t.valueCallback(o[0]):o[0];s=n.valueCallback?n.valueCallback(s):s;const i=e.slice(r.length);return{value:s,rest:i}}}const kt=/^(\d+)(th|st|nd|rd)?/i,Wt=/\d+/i,Tt={narrow:/^(b|a)/i,abbreviated:/^(b\.?\s?c\.?|b\.?\s?c\.?\s?e\.?|a\.?\s?d\.?|c\.?\s?e\.?)/i,wide:/^(before christ|before common era|anno domini|common era)/i},Ct={any:[/^b/i,/^(a|c)/i]},Yt={narrow:/^[1234]/i,abbreviated:/^q[1234]/i,wide:/^[1234](th|st|nd|rd)? quarter/i},Nt={any:[/1/i,/2/i,/3/i,/4/i]},Ft={narrow:/^[jfmasond]/i,abbreviated:/^(jan|feb|mar|apr|may|jun|jul|aug|sep|oct|nov|dec)/i,wide:/^(january|february|march|april|may|june|july|august|september|october|november|december)/i},At={narrow:[/^j/i,/^f/i,/^m/i,/^a/i,/^m/i,/^j/i,/^j/i,/^a/i,/^s/i,/^o/i,/^n/i,/^d/i],any:[/^ja/i,/^f/i,/^mar/i,/^ap/i,/^may/i,/^jun/i,/^jul/i,/^au/i,/^s/i,/^o/i,/^n/i,/^d/i]},Lt={narrow:/^[smtwf]/i,short:/^(su|mo|tu|we|th|fr|sa)/i,abbreviated:/^(sun|mon|tue|wed|thu|fri|sat)/i,wide:/^(sunday|monday|tuesday|wednesday|thursday|friday|saturday)/i},It={narrow:[/^s/i,/^m/i,/^t/i,/^w/i,/^t/i,/^f/i,/^s/i],any:[/^su/i,/^m/i,/^tu/i,/^w/i,/^th/i,/^f/i,/^sa/i]},_t={narrow:/^(a|p|mi|n|(in the|at) (morning|afternoon|evening|night))/i,any:/^([ap]\.?\s?m\.?|midnight|noon|(in the|at) (morning|afternoon|evening|night))/i},Rt={any:{am:/^a/i,pm:/^p/i,midnight:/^mi/i,noon:/^no/i,morning:/morning/i,afternoon:/afternoon/i,evening:/evening/i,night:/night/i}},qt={ordinalNumber:vt({matchPattern:kt,parsePattern:Wt,valueCallback:t=>parseInt(t,10)}),era:S({matchPatterns:Tt,defaultMatchWidth:"wide",parsePatterns:Ct,defaultParseWidth:"any"}),quarter:S({matchPatterns:Yt,defaultMatchWidth:"wide",parsePatterns:Nt,defaultParseWidth:"any",valueCallback:t=>t+1}),month:S({matchPatterns:Ft,defaultMatchWidth:"wide",parsePatterns:At,defaultParseWidth:"any"}),day:S({matchPatterns:Lt,defaultMatchWidth:"wide",parsePatterns:It,defaultParseWidth:"any"}),dayPeriod:S({matchPatterns:_t,defaultMatchWidth:"any",parsePatterns:Rt,defaultParseWidth:"any"})},Ht={code:"en-US",formatDistance:dt,formatLong:mt,formatRelative:wt,localize:xt,match:qt,options:{weekStartsOn:0,firstWeekContainsDate:1}};function Gt(t,e){const n=m(t,e?.in);return rt(n,ct(n))+1}function jt(t,e){const n=m(t,e?.in),a=+P(n)-+ot(n);return Math.round(a/G)+1}function V(t,e){const n=m(t,e?.in),a=n.getFullYear(),r=W(),o=e?.firstWeekContainsDate??e?.locale?.options?.firstWeekContainsDate??r.firstWeekContainsDate??r.locale?.options?.firstWeekContainsDate??1,s=y(e?.in||t,0);s.setFullYear(a+1,0,o),s.setHours(0,0,0,0);const i=M(s,e),c=y(e?.in||t,0);c.setFullYear(a,0,o),c.setHours(0,0,0,0);const d=M(c,e);return+n>=+i?a+1:+n>=+d?a:a-1}function Vt(t,e){const n=W(),a=e?.firstWeekContainsDate??e?.locale?.options?.firstWeekContainsDate??n.firstWeekContainsDate??n.locale?.options?.firstWeekContainsDate??1,r=V(t,e),o=y(e?.in||t,0);return o.setFullYear(r,0,a),o.setHours(0,0,0,0),M(o,e)}function Bt(t,e){const n=m(t,e?.in),a=+M(n,e)-+Vt(n,e);return Math.round(a/G)+1}function u(t,e){const n=t<0?"-":"",a=Math.abs(t).toString().padStart(e,"0");return n+a}const w={y(t,e){const n=t.getFullYear(),a=n>0?n:1-n;return u(e==="yy"?a%100:a,e.length)},M(t,e){const n=t.getMonth();return e==="M"?String(n+1):u(n+1,2)},d(t,e){return u(t.getDate(),e.length)},a(t,e){const n=t.getHours()/12>=1?"pm":"am";switch(e){case"a":case"aa":return n.toUpperCase();case"aaa":return n;case"aaaaa":return n[0];default:return n==="am"?"a.m.":"p.m."}},h(t,e){return u(t.getHours()%12||12,e.length)},H(t,e){return u(t.getHours(),e.length)},m(t,e){return u(t.getMinutes(),e.length)},s(t,e){return u(t.getSeconds(),e.length)},S(t,e){const n=e.length,a=t.getMilliseconds(),r=Math.trunc(a*Math.pow(10,n-3));return u(r,e.length)}},O={midnight:"midnight",noon:"noon",morning:"morning",afternoon:"afternoon",evening:"evening",night:"night"},A={G:function(t,e,n){const a=t.getFullYear()>0?1:0;switch(e){case"G":case"GG":case"GGG":return n.era(a,{width:"abbreviated"});case"GGGGG":return n.era(a,{width:"narrow"});default:return n.era(a,{width:"wide"})}},y:function(t,e,n){if(e==="yo"){const a=t.getFullYear(),r=a>0?a:1-a;return n.ordinalNumber(r,{unit:"year"})}return w.y(t,e)},Y:function(t,e,n,a){const r=V(t,a),o=r>0?r:1-r;if(e==="YY"){const s=o%100;return u(s,2)}return e==="Yo"?n.ordinalNumber(o,{unit:"year"}):u(o,e.length)},R:function(t,e){const n=j(t);return u(n,e.length)},u:function(t,e){const n=t.getFullYear();return u(n,e.length)},Q:function(t,e,n){const a=Math.ceil((t.getMonth()+1)/3);switch(e){case"Q":return String(a);case"QQ":return u(a,2);case"Qo":return n.ordinalNumber(a,{unit:"quarter"});case"QQQ":return n.quarter(a,{width:"abbreviated",context:"formatting"});case"QQQQQ":return n.quarter(a,{width:"narrow",context:"formatting"});default:return n.quarter(a,{width:"wide",context:"formatting"})}},q:function(t,e,n){const a=Math.ceil((t.getMonth()+1)/3);switch(e){case"q":return String(a);case"qq":return u(a,2);case"qo":return n.ordinalNumber(a,{unit:"quarter"});case"qqq":return n.quarter(a,{width:"abbreviated",context:"standalone"});case"qqqqq":return n.quarter(a,{width:"narrow",context:"standalone"});default:return n.quarter(a,{width:"wide",context:"standalone"})}},M:function(t,e,n){const a=t.getMonth();switch(e){case"M":case"MM":return w.M(t,e);case"Mo":return n.ordinalNumber(a+1,{unit:"month"});case"MMM":return n.month(a,{width:"abbreviated",context:"formatting"});case"MMMMM":return n.month(a,{width:"narrow",context:"formatting"});default:return n.month(a,{width:"wide",context:"formatting"})}},L:function(t,e,n){const a=t.getMonth();switch(e){case"L":return String(a+1);case"LL":return u(a+1,2);case"Lo":return n.ordinalNumber(a+1,{unit:"month"});case"LLL":return n.month(a,{width:"abbreviated",context:"standalone"});case"LLLLL":return n.month(a,{width:"narrow",context:"standalone"});default:return n.month(a,{width:"wide",context:"standalone"})}},w:function(t,e,n,a){const r=Bt(t,a);return e==="wo"?n.ordinalNumber(r,{unit:"week"}):u(r,e.length)},I:function(t,e,n){const a=jt(t);return e==="Io"?n.ordinalNumber(a,{unit:"week"}):u(a,e.length)},d:function(t,e,n){return e==="do"?n.ordinalNumber(t.getDate(),{unit:"date"}):w.d(t,e)},D:function(t,e,n){const a=Gt(t);return e==="Do"?n.ordinalNumber(a,{unit:"dayOfYear"}):u(a,e.length)},E:function(t,e,n){const a=t.getDay();switch(e){case"E":case"EE":case"EEE":return n.day(a,{width:"abbreviated",context:"formatting"});case"EEEEE":return n.day(a,{width:"narrow",context:"formatting"});case"EEEEEE":return n.day(a,{width:"short",context:"formatting"});default:return n.day(a,{width:"wide",context:"formatting"})}},e:function(t,e,n,a){const r=t.getDay(),o=(r-a.weekStartsOn+8)%7||7;switch(e){case"e":return String(o);case"ee":return u(o,2);case"eo":return n.ordinalNumber(o,{unit:"day"});case"eee":return n.day(r,{width:"abbreviated",context:"formatting"});case"eeeee":return n.day(r,{width:"narrow",context:"formatting"});case"eeeeee":return n.day(r,{width:"short",context:"formatting"});default:return n.day(r,{width:"wide",context:"formatting"})}},c:function(t,e,n,a){const r=t.getDay(),o=(r-a.weekStartsOn+8)%7||7;switch(e){case"c":return String(o);case"cc":return u(o,e.length);case"co":return n.ordinalNumber(o,{unit:"day"});case"ccc":return n.day(r,{width:"abbreviated",context:"standalone"});case"ccccc":return n.day(r,{width:"narrow",context:"standalone"});case"cccccc":return n.day(r,{width:"short",context:"standalone"});default:return n.day(r,{width:"wide",context:"standalone"})}},i:function(t,e,n){const a=t.getDay(),r=a===0?7:a;switch(e){case"i":return String(r);case"ii":return u(r,e.length);case"io":return n.ordinalNumber(r,{unit:"day"});case"iii":return n.day(a,{width:"abbreviated",context:"formatting"});case"iiiii":return n.day(a,{width:"narrow",context:"formatting"});case"iiiiii":return n.day(a,{width:"short",context:"formatting"});default:return n.day(a,{width:"wide",context:"formatting"})}},a:function(t,e,n){const r=t.getHours()/12>=1?"pm":"am";switch(e){case"a":case"aa":return n.dayPeriod(r,{width:"abbreviated",context:"formatting"});case"aaa":return n.dayPeriod(r,{width:"abbreviated",context:"formatting"}).toLowerCase();case"aaaaa":return n.dayPeriod(r,{width:"narrow",context:"formatting"});default:return n.dayPeriod(r,{width:"wide",context:"formatting"})}},b:function(t,e,n){const a=t.getHours();let r;switch(a===12?r=O.noon:a===0?r=O.midnight:r=a/12>=1?"pm":"am",e){case"b":case"bb":return n.dayPeriod(r,{width:"abbreviated",context:"formatting"});case"bbb":return n.dayPeriod(r,{width:"abbreviated",context:"formatting"}).toLowerCase();case"bbbbb":return n.dayPeriod(r,{width:"narrow",context:"formatting"});default:return n.dayPeriod(r,{width:"wide",context:"formatting"})}},B:function(t,e,n){const a=t.getHours();let r;switch(a>=17?r=O.evening:a>=12?r=O.afternoon:a>=4?r=O.morning:r=O.night,e){case"B":case"BB":case"BBB":return n.dayPeriod(r,{width:"abbreviated",context:"formatting"});case"BBBBB":return n.dayPeriod(r,{width:"narrow",context:"formatting"});default:return n.dayPeriod(r,{width:"wide",context:"formatting"})}},h:function(t,e,n){if(e==="ho"){let a=t.getHours()%12;return a===0&&(a=12),n.ordinalNumber(a,{unit:"hour"})}return w.h(t,e)},H:function(t,e,n){return e==="Ho"?n.ordinalNumber(t.getHours(),{unit:"hour"}):w.H(t,e)},K:function(t,e,n){const a=t.getHours()%12;return e==="Ko"?n.ordinalNumber(a,{unit:"hour"}):u(a,e.length)},k:function(t,e,n){let a=t.getHours();return a===0&&(a=24),e==="ko"?n.ordinalNumber(a,{unit:"hour"}):u(a,e.length)},m:function(t,e,n){return e==="mo"?n.ordinalNumber(t.getMinutes(),{unit:"minute"}):w.m(t,e)},s:function(t,e,n){return e==="so"?n.ordinalNumber(t.getSeconds(),{unit:"second"}):w.s(t,e)},S:function(t,e){return w.S(t,e)},X:function(t,e,n){const a=t.getTimezoneOffset();if(a===0)return"Z";switch(e){case"X":return I(a);case"XXXX":case"XX":return b(a);default:return b(a,":")}},x:function(t,e,n){const a=t.getTimezoneOffset();switch(e){case"x":return I(a);case"xxxx":case"xx":return b(a);default:return b(a,":")}},O:function(t,e,n){const a=t.getTimezoneOffset();switch(e){case"O":case"OO":case"OOO":return"GMT"+L(a,":");default:return"GMT"+b(a,":")}},z:function(t,e,n){const a=t.getTimezoneOffset();switch(e){case"z":case"zz":case"zzz":return"GMT"+L(a,":");default:return"GMT"+b(a,":")}},t:function(t,e,n){const a=Math.trunc(+t/1e3);return u(a,e.length)},T:function(t,e,n){return u(+t,e.length)}};function L(t,e=""){const n=t>0?"-":"+",a=Math.abs(t),r=Math.trunc(a/60),o=a%60;return o===0?n+String(r):n+String(r)+e+u(o,2)}function I(t,e){return t%60===0?(t>0?"-":"+")+u(Math.abs(t)/60,2):b(t,e)}function b(t,e=""){const n=t>0?"-":"+",a=Math.abs(t),r=u(Math.trunc(a/60),2),o=u(a%60,2);return n+r+e+o}const _=(t,e)=>{switch(t){case"P":return e.date({width:"short"});case"PP":return e.date({width:"medium"});case"PPP":return e.date({width:"long"});default:return e.date({width:"full"})}},B=(t,e)=>{switch(t){case"p":return e.time({width:"short"});case"pp":return e.time({width:"medium"});case"ppp":return e.time({width:"long"});default:return e.time({width:"full"})}},$t=(t,e)=>{const n=t.match(/(P+)(p+)?/)||[],a=n[1],r=n[2];if(!r)return _(t,e);let o;switch(a){case"P":o=e.dateTime({width:"short"});break;case"PP":o=e.dateTime({width:"medium"});break;case"PPP":o=e.dateTime({width:"long"});break;default:o=e.dateTime({width:"full"});break}return o.replace("{{date}}",_(a,e)).replace("{{time}}",B(r,e))},Qt={p:B,P:$t},Xt=/^D+$/,Ut=/^Y+$/,zt=["D","DD","YY","YYYY"];function Jt(t){return Xt.test(t)}function Kt(t){return Ut.test(t)}function Zt(t,e,n){const a=te(t,e,n);if(console.warn(a),zt.includes(t))throw new RangeError(a)}function te(t,e,n){const a=t[0]==="Y"?"years":"days of the month";return`Use \`${t.toLowerCase()}\` instead of \`${t}\` (in \`${e}\`) for formatting ${a} to the input \`${n}\`; see: https://github.com/date-fns/date-fns/blob/master/docs/unicodeTokens.md`}const ee=/[yYQqMLwIdDecihHKkms]o|(\w)\1*|''|'(''|[^'])+('|$)|./g,ne=/P+p+|P+|p+|''|'(''|[^'])+('|$)|./g,ae=/^'([^]*?)'?$/,re=/''/g,oe=/[a-zA-Z]/;function ve(t,e,n){const a=W(),r=a.locale??Ht,o=a.firstWeekContainsDate??a.locale?.options?.firstWeekContainsDate??1,s=a.weekStartsOn??a.locale?.options?.weekStartsOn??0,i=m(t,n?.in);if(!it(i))throw new RangeError("Invalid time value");let c=e.match(ne).map(h=>{const f=h[0];if(f==="p"||f==="P"){const T=Qt[f];return T(h,r.formatLong)}return h}).join("").match(ee).map(h=>{if(h==="''")return{isToken:!1,value:"'"};const f=h[0];if(f==="'")return{isToken:!1,value:se(h)};if(A[f])return{isToken:!0,value:h};if(f.match(oe))throw new RangeError("Format string contains an unescaped latin alphabet character `"+f+"`");return{isToken:!1,value:h}});r.localize.preprocessor&&(c=r.localize.preprocessor(i,c));const d={firstWeekContainsDate:o,weekStartsOn:s,locale:r};return c.map(h=>{if(!h.isToken)return h.value;const f=h.value;(Kt(f)||Jt(f))&&Zt(f,e,String(t));const T=A[f[0]];return T(i,f,r.localize,d)}).join("")}function se(t){const e=t.match(ae);return e?e[1].replace(re,"'"):t}const ie=x(l.jsx("path",{d:"M20 4H4c-1.11 0-1.99.89-1.99 2L2 18c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V6c0-1.11-.89-2-2-2M8.5 15H7.3l-2.55-3.5V15H3.5V9h1.25l2.5 3.5V9H8.5zm5-4.74H11v1.12h2.5v1.26H11v1.11h2.5V15h-4V9h4zm7 3.74c0 .55-.45 1-1 1h-4c-.55 0-1-.45-1-1V9h1.25v4.51h1.13V9.99h1.25v3.51h1.12V9h1.25z"})),ce=x(l.jsx("path",{d:"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"})),ue=x(l.jsx("path",{d:"M22 5.18 10.59 16.6l-4.24-4.24 1.41-1.41 2.83 2.83 10-10zm-2.21 5.04c.13.57.21 1.17.21 1.78 0 4.42-3.58 8-8 8s-8-3.58-8-8 3.58-8 8-8c1.58 0 3.04.46 4.28 1.25l1.44-1.44C16.1 2.67 14.13 2 12 2 6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10c0-1.19-.22-2.33-.6-3.39z"})),de=x([l.jsx("path",{d:"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"},"0"),l.jsx("path",{d:"M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"},"1")]),fe=x(l.jsx("path",{d:"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"})),he={NEW:"default",NEEDS_REVIEW:"error",TRIAGED:"info",FOLLOWING_UP:"secondary",CLOSED:"success"},le={NEW:l.jsx(ie,{fontSize:"inherit"}),NEEDS_REVIEW:l.jsx(ce,{fontSize:"inherit"}),TRIAGED:l.jsx(ue,{fontSize:"inherit"}),FOLLOWING_UP:l.jsx(de,{fontSize:"inherit"}),CLOSED:l.jsx(fe,{fontSize:"inherit"})};function ke({status:t,size:e="small"}){const{t:n}=$();return l.jsx(Q,{icon:le[t],label:n(`status.${t}`),color:he[t],size:e,variant:"filled","aria-label":n(`status.${t}`)})}export{fe as C,ce as E,ke as S,Se as a,we as b,pe as c,rt as d,y as e,ve as f,xe as g,Pe as h,Me as i,de as j,be as k,De as l,Ee as m,at as n,ye as o,F as s,m as t,Oe as u};
